# nc-fuel-planner

./: .gitignore  LICENSE  README.md  nc-fuel-planner.cabal  stack.yaml
src/: FuelPlanner.hs
