name:                nc-fuel-planner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ab9rf/nc-fuel-planner#readme
license:             BSD3
license-file:        LICENSE
author:              Kelly Kinkade
maintainer:          kmartin@pyrzqxgl.org
copyright:           Copyright (c) 2018 Kelly Kinkade
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nc-fuel-planner
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
  		     , containers >= 0.6.0.1
                     , hmatrix-glpk >= 0.19.0.0
